--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "html-webpack-plugin": "^1.7.0",
     "image-webpack-loader": "^3.0.0",
     "react": "^15.4.2",
+    "react-bootstrap-table": "^3.1.1",
     "react-dom": "^15.4.2",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
