--- a/package.json
+++ b/package.json
@@ -21,53 +21,53 @@
     "jscs": "jscs ."
   },
   "dependencies": {
-    "babel-cli": "^6.4.0",
-    "css-loader": "^0.19.0",
-    "express": "^4.14.0",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^1.7.0",
-    "image-webpack-loader": "^3.0.0",
-    "react": "^15.4.2",
-    "react-bootstrap-table": "^3.1.1",
-    "react-dom": "^15.4.2",
-    "react-router": "^4.0.0",
-    "react-router-dom": "^4.0.0",
-    "react-tap-event-plugin": "^2.0.1",
-    "style-loader": "^0.12.4",
-    "webpack": "^1.13.3",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.13.0"
+    "babel-cli": "6.4.0",
+    "css-loader": "0.19.0",
+    "express": "4.14.0",
+    "file-loader": "0.9.0",
+    "html-webpack-plugin": "1.7.0",
+    "image-webpack-loader": "3.0.0",
+    "react": "15.4.2",
+    "react-bootstrap-table": "3.1.1",
+    "react-dom": "15.4.2",
+    "react-router": "4.0.0",
+    "react-router-dom": "4.0.0",
+    "react-tap-event-plugin": "2.0.1",
+    "style-loader": "0.12.4",
+    "webpack": "1.13.3",
+    "webpack-dev-middleware": "1.8.4",
+    "webpack-hot-middleware": "2.13.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.0.3",
-    "babel-eslint": "^4.1.6",
-    "babel-jscs": "^2.0.5",
-    "babel-loader": "^6.2.3",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.1.0",
-    "babel-preset-stage-0": "^6.3.13",
-    "chai": "^3.2.0",
-    "cross-env": "^1.0.7",
-    "css-loader": "^0.19.0",
-    "eslint": "^1.5.0",
-    "eslint-plugin-react": "^3.4.2",
-    "extract-text-webpack-plugin": "^0.8.2",
-    "jscs": "^2.1.1",
-    "jsdom": "^6.5.1",
-    "json-loader": "^0.5.3",
-    "less": "^2.7.1",
-    "mocha": "^2.3.3",
-    "mocha-jsdom": "^1.0.0",
-    "postcss-loader": "^0.6.0",
-    "react-addons-test-utils": "^0.14.3",
-    "react-transform-hmr": "^1.0.0",
-    "rimraf": "^2.4.3",
-    "sass": "^0.5.0",
-    "sinon": "^1.16.1",
-    "sinon-chai": "^2.8.0",
-    "stats-webpack-plugin": "^0.2.1",
-    "style-loader": "^0.12.4",
-    "url-loader": "^0.5.7"
+    "autoprefixer": "6.0.3",
+    "babel-eslint": "4.1.6",
+    "babel-jscs": "2.0.5",
+    "babel-loader": "6.2.3",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
+    "babel-preset-react-hmre": "1.1.0",
+    "babel-preset-stage-0": "6.3.13",
+    "chai": "3.2.0",
+    "cross-env": "1.0.7",
+    "css-loader": "0.19.0",
+    "eslint": "1.5.0",
+    "eslint-plugin-react": "3.4.2",
+    "extract-text-webpack-plugin": "0.8.2",
+    "jscs": "2.1.1",
+    "jsdom": "6.5.1",
+    "json-loader": "0.5.3",
+    "less": "2.7.1",
+    "mocha": "2.3.3",
+    "mocha-jsdom": "1.0.0",
+    "postcss-loader": "0.6.0",
+    "react-addons-test-utils": "0.14.3",
+    "react-transform-hmr": "1.0.0",
+    "rimraf": "2.4.3",
+    "sass": "0.5.0",
+    "sinon": "1.16.1",
+    "sinon-chai": "2.8.0",
+    "stats-webpack-plugin": "0.2.1",
+    "style-loader": "0.12.4",
+    "url-loader": "0.5.7"
   }
 }
